--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "exatech-group/laravel-h5p",
+    "name": "kloos-dev/laravel-h5p",
     "description": "H5P Plugin for laravel platform",
     "type": "library",
     "authors": [
@@ -18,7 +18,7 @@
     },
     "require": {
         "php": "^7.1",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "6.*",
         "laravelcollective/html": "5.8",
         "twbs/bootstrap-sass": "@stable",
         "h5p/h5p-core": "^1.24",
